[gd_scene load_steps=11 format=2]

[ext_resource path="res://Game/GUI/assets/font/Comfortaa-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Game/GUI/counter/RMIconContainer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/GameScreen/Buttons/QuitBtn.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game/GameScreen/Title.tscn" type="PackedScene" id=4]
[ext_resource path="res://Game/GameScreen/Buttons/PlayBtn.tscn" type="PackedScene" id=5]
[ext_resource path="res://Game/GameScreen/EndGameScreen.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=2]
size = 34
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 42
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 28
font_data = ExtResource( 1 )

[node name="EndGameScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.258824, 0.560784, 0.341176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" parent="PauseRect" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_right = 1.0
margin_left = 0.0
margin_top = 40.4086
margin_right = 0.0
margin_bottom = 112.409
text = "Title menu: You are win or You are fail."
align = 1

[node name="Description" parent="PauseRect" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_right = 1.0
margin_left = 0.0
margin_top = 119.208
margin_right = 0.0
margin_bottom = 191.208
custom_fonts/font = SubResource( 2 )
text = "Long description progess"
align = 1

[node name="ResourceContainer" type="VBoxContainer" parent="PauseRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -71.5
margin_top = -189.39
margin_right = 71.5
margin_bottom = -129.39
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RMItemResource" type="HBoxContainer" parent="PauseRect/ResourceContainer"]
margin_right = 143.0
margin_bottom = 60.0

[node name="RMIconContainer" parent="PauseRect/ResourceContainer/RMItemResource" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 60.0
margin_bottom = 60.0
rect_scale = Vector2( 1, 1 )

[node name="Separete" type="Label" parent="PauseRect/ResourceContainer/RMItemResource"]
margin_left = 64.0
margin_top = 6.0
margin_right = 111.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 3 )
text = " x "

[node name="Value" type="Label" parent="PauseRect/ResourceContainer/RMItemResource"]
margin_left = 115.0
margin_top = 2.0
margin_right = 143.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 4 )
text = "0"

[node name="Label" parent="PauseRect" instance=ExtResource( 4 )]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -201.0
margin_top = -60.0
margin_right = 244.0
margin_bottom = 7.0
custom_fonts/font = SubResource( 1 )
text = "Distance traveled: %.2f
Travel time is:        %s"

[node name="ContainerBtn" type="VBoxContainer" parent="PauseRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -199.484
margin_top = 83.6066
margin_right = 234.516
margin_bottom = 299.606
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayBtn" parent="PauseRect/ContainerBtn" instance=ExtResource( 5 )]
margin_top = 0.0
margin_right = 434.0
margin_bottom = 105.0
level_scn = "res://Game/Game.tscn"

[node name="QuitBtn" parent="PauseRect/ContainerBtn" instance=ExtResource( 3 )]
margin_top = 109.0
margin_right = 434.0
margin_bottom = 215.0
